feat: fix naming

--- a/style.css
+++ b/style.css
@@ -5,23 +5,23 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.more-link {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.more-link img {
   width: 100%;
 }
 
-.aaa .more_inf {
+.more-link .more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa {
+  .more-link {
     text-align: center;
   }
 }
@@ -152,7 +152,7 @@ button.delete img:hover {
 
 /* Completed */
 ul#completed-tasks label {
-  text-decoration: line-through color: #888;
+  text-decoration: line-through color #888;
 }
 
 /* Edit Task */
